--- a/Amazon Product Analysis.ipynb
+++ b/Amazon Product Analysis.ipynb
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0284cc94",
+   "id": "7e555396",
    "metadata": {},
    "source": [
     "# 1. DATA PREPARATION"
@@ -783,7 +783,11 @@
    "id": "97548d05",
    "metadata": {},
    "source": [
-    "I think I should create one more column that could be interesting to have in our database - \"rating_weighted\" because it can be created as a way of considering not only the average rating but also the number of people who rated the product. This column weighs the average rating by the number of ratings, giving more weight to ratings with a large number of raters. This can help identify products with high customer satisfaction and many positive ratings compared to products with high average ratings but few raters."
+    "--------------------------------\n",
+    "\n",
+    "I think I should create one more column that could be interesting to have in our database - \"rating_weighted\" because it can be created as a way of considering not only the average rating but also the number of people who rated the product. This column weighs the average rating by the number of ratings, giving more weight to ratings with a large number of raters. This can help identify products with high customer satisfaction and many positive ratings compared to products with high average ratings but few raters.\n",
+    "\n",
+    "--------------------------------"
    ]
   },
   {
@@ -825,7 +829,11 @@
    "id": "00317752",
    "metadata": {},
    "source": [
-    "Extracting both the main and final categories from the category column is important because it provides us with a clearer picture of how our products are distributed across different categories. By identifying the main category, we can understand the broader classification of the product, while the final category tells us more specifically what the product is."
+    "--------------------------------\n",
+    "\n",
+    "Extracting both the main and final categories from the category column is important because it provides us with a clearer picture of how our products are distributed across different categories. By identifying the main category, we can understand the broader classification of the product, while the final category tells us more specifically what the product is.\n",
+    "\n",
+    "--------------------------------"
    ]
   },
   {
@@ -1120,7 +1128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac57ec9b",
+   "id": "6088bdc9",
    "metadata": {},
    "source": [
     "# 2. DATA EXPLORATION & VISUALIZATION"
@@ -1128,7 +1136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ce023fa",
+   "id": "36509942",
    "metadata": {},
    "source": [
     "# 2.1 Analyze the distribution of products by category using a bar plot."
@@ -1192,12 +1200,16 @@
    "id": "ead61d06",
    "metadata": {},
    "source": [
+    "--------------------------------\n",
+    "\n",
     "Based on the results, we can gather the following insights:\n",
     "- The top three main categories are Electronics, Computers & Accessories, and Home & Kitchen. This shows that these categories are popular among customers.\n",
     "- The number of products in the other main categories is quite low, indicating that these categories are not as popular as the top three.\n",
     "- Office Products, Musical Instruments, Home Improvement, Toys & Games, Car & Motorbike, and Health & Personal Care have a very small number of products, which may suggest that these categories have less demand.\n",
     "\n",
-    "Overall, the data can help businesses understand the current market trends and identify potential opportunities for growth in specific categories."
+    "Overall, the data can help businesses understand the current market trends and identify potential opportunities for growth in specific categories.\n",
+    "\n",
+    "--------------------------------"
    ]
   },
   {
@@ -1279,17 +1291,21 @@
    "id": "70eeaab1",
    "metadata": {},
    "source": [
+    "--------------------------------\n",
+    "\n",
     "Based on the results, we can gather the following insights:\n",
     "- The top six subcategories are USB cables, smartwatches, smartphones, smart televisions, in-ear headphones, and remote controls. These are the most popular subcategories, and businesses could focus on providing products in these categories to attract customers.\n",
     "- Other popular subcategories include mixer grinders, HDMI cables, dry irons, mice, and instant water heaters. These subcategories may be less popular than the top six, but they still have a significant number of products, indicating that there is demand for them.\n",
     "- The data shows that there is a diverse range of subcategories in the top 30, including kitchen appliances, home electronics, and personal accessories. This highlights the importance of offering a variety of products to cater to different customer needs and preferences.\n",
     "\n",
-    "Overall, the data can help businesses identify the most popular subcategories and adjust their product offerings to meet customer demand. By focusing on these subcategories, businesses could increase their sales and improve their competitiveness in the market."
+    "Overall, the data can help businesses identify the most popular subcategories and adjust their product offerings to meet customer demand. By focusing on these subcategories, businesses could increase their sales and improve their competitiveness in the market.\n",
+    "\n",
+    "--------------------------------"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "58c05357",
+   "id": "c95f28db",
    "metadata": {},
    "source": [
     "# 2.2 Analyze the distribution of customer ratings using a histogram."
@@ -1345,11 +1361,15 @@
    "id": "de24688a",
    "metadata": {},
    "source": [
+    "--------------------------------\n",
+    "\n",
     "The majority of customer ratings fall within the 3-4 and 4-5 range, with a total of 1453 reviews.\n",
     "\n",
     "There is a noticeable increase in the number of reviews in the 2-3 range compared to the lower 0-1 and 1-2 ranges, indicating that ratings are at the average level. There may be room for improvement in terms of customer satisfaction to remove maximumly negative replies.\n",
     "\n",
-    "Overall, the distribution of customer ratings suggests that most customers are satisfied with the products, but there may be opportunities for improvement to increase the number of positive ratings."
+    "Overall, the distribution of customer ratings suggests that most customers are satisfied with the products, but there may be opportunities for improvement to increase the number of positive ratings.\n",
+    "\n",
+    "--------------------------------"
    ]
   },
   {
@@ -1412,12 +1432,16 @@
    "id": "896b14b9",
    "metadata": {},
    "source": [
+    "--------------------------------\n",
+    "\n",
     "Some insights as below:\n",
     "- The main categories with the highest ratings are Office Products, Toys & Games, and Home Improvement, with ratings above 4.0. This suggests that customers are generally satisfied with the products offered in these categories.\n",
     "- On the other hand, the main categories with lower ratings are Car & Motorbike, Musical Instruments, and Health & Personal Care, with ratings below 4.0. This could indicate areas where improvements could be made to better meet customer expectations.\n",
     "- Additionally, we can see that Computers & Accessories and Electronics also have ratings above 4.0, which indicates that these categories are popular and well-liked by customers who purchase them.\n",
     "\n",
-    "Overall, this table provides valuable insights into the performance of different main categories and can help businesses make informed decisions to improve their offerings and satisfy their customers."
+    "Overall, this table provides valuable insights into the performance of different main categories and can help businesses make informed decisions to improve their offerings and satisfy their customers.\n",
+    "\n",
+    "--------------------------------"
    ]
   },
   {
@@ -1484,11 +1508,15 @@
    "id": "85987eea",
    "metadata": {},
    "source": [
+    "--------------------------------\n",
+    "\n",
     "Some insights as below:\n",
     "- It's great to see that the \"Tablets\" sub-category is at the top with a rating of 4.6, which indicates that customers are satisfied with their purchase.\n",
     "- However, there are some sub-categories at the bottom, such as \"DustCovers\" and \"ElectricGrinders\", which have lower ratings, implying that customers are not very happy with these products.\n",
     "\n",
-    "Insights like these can help businesses focus on improving the quality of their products and enhancing the overall customer experience. It's important to keep track of customer feedback to identify area"
+    "Insights like these can help businesses focus on improving the quality of their products and enhancing the overall customer experience. It's important to keep track of customer feedback to identify area.\n",
+    "\n",
+    "--------------------------------"
    ]
   },
   {
@@ -1542,20 +1570,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "383aee80",
+   "id": "f9f7a28d",
    "metadata": {},
    "source": [
+    "--------------------------------\n",
+    "\n",
     "The table above shows the mean discount percentage by main category, sorted in descending order.\n",
     "- The category with the lowest mean discount percentage is Toys & Games, with a value of 0.0. This may indicate that the demand for toys and games is high enough that retailers do not need to offer significant discounts to sell products in this category.\n",
     " Home & Kitchen, Car & Motorbike, and Musical Instruments have similar mean discount percentages, with values of 0.40, 0.42, and 0.46 respectively. This suggests that there may be a similar level of competition and price sensitivity in these two categories.\n",
     "- The categories with the highest mean discount percentages are Home Improvement, Computers & Accessories, Health & Personal Care, and Electronics, with values of 0.58, 0.54, 0.53, and 0.51, respectively. This may indicate that these categories are more price-sensitive, and retailers need to offer attractive discounts to compete effectively.\n",
-    "- It's also interesting to note that OfficeProducts have mean discount percentages of 0.123548, which are in between the categories with the lowest and highest mean discount percentages. This suggests that these categories may have some level of price sensitivity, but not to the same extent as HomeImprovement, Computers&Accessories, and Electronics."
+    "- It's also interesting to note that OfficeProducts have mean discount percentages of 0.123548, which are in between the categories with the lowest and highest mean discount percentages. This suggests that these categories may have some level of price sensitivity, but not to the same extent as HomeImprovement, Computers&Accessories, and Electronics.\n",
+    "\n",
+    "--------------------------------"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "ca37b656",
+   "id": "997c4dbb",
    "metadata": {},
    "outputs": [
     {
@@ -1609,20 +1641,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bc1b258",
+   "id": "2e12cadc",
    "metadata": {},
    "source": [
+    "--------------------------------\n",
+    "\n",
     "The table above shows the mean discount percentage by subcategory (Top 15), sorted in descending order.\n",
     "- The subcategory with the lowest mean discount percentage is Basic, with a value of 0.0. This may indicate that basic products, which are typically low-cost and simple, do not need to be discounted heavily to attract buyers.\n",
     "- BatteryChargers, 3DGlasses, and BasicMobiles are examples of subcategories with moderate mean discount percentages, with values between 0.18 and 0.25. This suggests that these products may be somewhat price-sensitive, but not to the same extent as the products in the higher mean discount percentage subcategories.\n",
     "- BluetoothSpeakers, Bedstand&DeskMounts, and BasicCases are subcategories with high mean discount percentages, with values between 0.485 and 0.745. This suggests that these products may be more price-sensitive than others and that retailers may need to offer attractive discounts to compete effectively in these subcategories.\n",
-    "- The subcategory with the highest mean discount percentage is Adapters, with a value of 0.803333. This indicates that the competition for these products is high and that retailers must offer significant discounts to attract buyers."
+    "- The subcategory with the highest mean discount percentage is Adapters, with a value of 0.803333. This indicates that the competition for these products is high and that retailers must offer significant discounts to attract buyers.\n",
+    "\n",
+    "--------------------------------"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "fc9e7e82",
+   "id": "245298c7",
    "metadata": {},
    "outputs": [
     {
@@ -1650,7 +1686,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e6a0267",
+   "id": "d6c8a13d",
    "metadata": {},
    "source": [
     "# 2.3 Analyze the reviews by creating word clouds or frequency tables of the most common words used in the reviews."
@@ -1659,7 +1695,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "eda879c8",
+   "id": "35677a89",
    "metadata": {},
    "outputs": [
     {
@@ -1688,16 +1724,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74858692",
+   "id": "73f5c352",
    "metadata": {},
    "source": [
-    "The code generates a word cloud based on the review text in the dataset, allowing us to visually analyze the most common words used in the reviews. The larger the word in the cloud, the more frequently it appears in the reviews. This can provide insights into the overall sentiment of the customers, the most frequently mentioned product features or issues, and other important information that can help businesses improve their products and services. In the following example, you can see the word cloud for products with a rating greater than 4."
+    "--------------------------------\n",
+    "\n",
+    "The code generates a word cloud based on the review text in the dataset, allowing us to visually analyze the most common words used in the reviews. The larger the word in the cloud, the more frequently it appears in the reviews. This can provide insights into the overall sentiment of the customers, the most frequently mentioned product features or issues, and other important information that can help businesses improve their products and services. In the following example, you can see the word cloud for products with a rating greater than 4.\n",
+    "\n",
+    "--------------------------------"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "15f31f55",
+   "id": "494d0ffb",
    "metadata": {},
    "outputs": [
     {
@@ -1731,7 +1771,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c0af080",
+   "id": "8ea669d1",
    "metadata": {},
    "source": [
     "# 2.4 Perform statistical analysis to identify any correlations between different features, such as the relationship between product price and customer rating."
@@ -1740,7 +1780,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "3879f5fb",
+   "id": "36074fb9",
    "metadata": {},
    "outputs": [
     {
@@ -1777,7 +1817,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "ea322975",
+   "id": "58773bd5",
    "metadata": {},
    "outputs": [
     {
@@ -1801,21 +1841,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc664195",
+   "id": "4117ebc9",
    "metadata": {},
    "source": [
+    "--------------------------------\n",
+    "\n",
     "So, we have here a correlation table between some variables of our dataset.\n",
     "\n",
     "We can see an extremely weak positive correlation between the overall rating and both the rating count and the weighted rating. This suggests that products with higher ratings tend to have more reviews and higher weighted ratings.\n",
     "\n",
     "There is a weak positive correlation (0.121) between the \"rating\" and \"discounted_price\" variables, indicating that customers may be more likely to rate a product higher if it is discounted.\n",
     "\n",
-    "It's important to note that correlation doesn't necessarily imply causation, but these insights can help us understand the relationships between different features in our data."
+    "It's important to note that correlation doesn't necessarily imply causation, but these insights can help us understand the relationships between different features in our data.\n",
+    "\n",
+    "--------------------------------"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bd028070",
+   "id": "7f47b4a1",
    "metadata": {},
    "source": [
     "# 4. Recommendation System"
@@ -1823,7 +1867,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7d15cf2",
+   "id": "bf98ae46",
    "metadata": {},
    "source": [
     "Our target is to help users find products that they will love! To achieve this, I'm creating a recommendation system using a dataset from Amazon that contains information about products, reviews, and users.\n",
@@ -1836,7 +1880,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "807c69be",
+   "id": "d8da183c",
    "metadata": {},
    "outputs": [
     {
@@ -1879,7 +1923,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "b36ed839",
+   "id": "e86c3ed5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1938,7 +1982,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "5f6af0e6",
+   "id": "3b1f7bbd",
    "metadata": {},
    "outputs": [
     {
@@ -2029,9 +2073,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8d65f16",
+   "id": "c2328d0a",
    "metadata": {},
    "source": [
+    "--------------------------------\n",
+    "\n",
     "After collecting and cleaning a dataset of over 1,000 products listed on Amazon, we developed a recommendation system using machine learning algorithms to suggest products to users based on their interests and previous purchases.\n",
     "\n",
     "Now, let's take a look at some insights that can be extracted from our system and how they can be valuable for a company:\n",
@@ -2042,7 +2088,9 @@
     "\n",
     "👉 Improving sales: By recommending products that are similar or complementary to the ones that users have already purchased, we can increase the chances of cross-selling and up-selling. This can result in higher revenue and profit for the company.\n",
     "\n",
-    "Overall, our Simple Recommendation System provides a powerful tool for companies to better understand their customers, improve their engagement and satisfaction, and increase their sales. "
+    "Overall, our Simple Recommendation System provides a powerful tool for companies to better understand their customers, improve their engagement and satisfaction, and increase their sales. \n",
+    "\n",
+    "--------------------------------"
    ]
   }
  ],
